--- a/src/app/pages/customer-advanced-page/customer-advanced-subscriptions/customer-advanced-subscriptions.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-subscriptions/customer-advanced-subscriptions.component.html
@@ -14,7 +14,7 @@
 
     <div class="card-body" *ngIf="rebills">
       <ng-container *ngFor="let rebill of rebills">
-        <rebill-item [rebill]="rebill" [pending]="true"></rebill-item>
+        <rebill-item [rebill]="rebill"></rebill-item>
       </ng-container>
     </div>
 
