--- a/src/app/pages/customer-advanced-page/item-components/info-table/info-table.component.scss
+++ b/src/app/pages/customer-advanced-page/item-components/info-table/info-table.component.scss
@@ -1,10 +1,10 @@
 .details {
   display: flex;
-  border: 1px solid rgba(0,0,0,0.06);
+  border: 1px solid rgba(0,0,0,0.12);
 
   .item {
     width: 25%;
-    border-right: 1px solid rgba(0,0,0,0.06);
+    border-right: 1px solid rgba(0,0,0,0.12);
 
     &:last-of-type {
       border-right: none;
@@ -19,7 +19,7 @@
       padding: 10px;
 
       &:first-of-type {
-        border-bottom: 1px solid rgba(0,0,0,0.06);
+        border-bottom: 1px solid rgba(0,0,0,0.12);
         font-size: 12px;
         color: #5F6368;
       }
@@ -27,6 +27,14 @@
       &:last-of-type {
         color: #202124;
         font-size: 15px;
+      }
+    }
+  }
+
+  &--order {
+    .item {
+      div:last-of-type {
+        background: #F1F3F4 !important;
       }
     }
   }
