--- a/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
+++ b/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.scss
@@ -1,8 +1,5 @@
 .container {
-  margin: 20px;
   background: white;
-  border-radius: 4px;
-  border: 2px solid rgba(0,0,0,0.12);
 }
 
 .chargeback {
@@ -15,7 +12,7 @@
 }
 
 .header {
-  padding: 20px;
+  padding: 25px;
 
   .info {
     display: flex;
@@ -63,6 +60,7 @@
       border: 1px solid rgba(0, 0, 0, 0.12);
 
       &:first-of-type {
+        margin-left: 0;
         margin-right: 20px;
       }
     }
@@ -73,163 +71,6 @@
 .button-disabled {
   background: rgba(0,0,0,0.06) !important;
   color: rgba(0,0,0,0.24) !important;
-}
-
-.details-wrapper {
-  display: flex;
-  margin: 0 20px;
-}
-
-.details {
-  width: 50%;
-  border-radius: 4px;
-  border: 1px solid rgba(0,0,0,0.12);
-
-  &:first-of-type {
-    margin-right: 10px;
-  }
-
-  &:last-of-type {
-    margin-left: 10px;
-  }
-
-  .title {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid rgba(0,0,0,0.12);
-
-    &--chargeback {
-      background: rgba(220, 37, 71, 0.1);
-    }
-
-    &--fulfillment {
-      background: rgba(30, 190, 165, 0.1);
-    }
-
-    div {
-      font-size: 16px;
-      color: #5F6368;
-      line-height: 24px;
-      padding: 12px 24px;
-
-      &:nth-of-type(2) {
-        margin-left: auto;
-        font-size: 14px;
-        color: #2C98F0;
-        cursor: pointer;
-      }
-    }
-  }
-
-  .fulfillment {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 25px;
-    box-sizing: border-box;
-    background: rgba(30, 190, 165, 0.1);
-    min-height: calc(100% - 48px);
-
-    .no-fulfillment {
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-
-      mat-icon {
-        font-size: 38px;
-        height: 38px;
-        width: 38px;
-        margin: auto auto 10px;
-        background: #1EBEA5;
-        color: #ffffff;
-        border-radius: 50%;
-      }
-
-      div {
-        width: 170px;
-        margin: 10px auto auto;
-        line-height: 24px;
-        font-size: 16px;
-        font-weight: 500;
-        color: #202124;
-        text-align: center;
-      }
-    }
-  }
-
-  .transactions {
-    max-height: 330px;
-    overflow: auto;
-
-    &--chargeback {
-      background: rgba(220, 37, 71, 0.1);
-    }
-
-    .chargeback-title {
-      display: flex;
-      align-items: center;
-
-      div {
-        color: #202124;
-        margin-left: 10px;
-        font-size: 16px;
-        font-weight: 500;
-      }
-    }
-
-    .column-items {
-      margin-top: 35px;
-
-      .item {
-        margin-top: 8px;
-        display: flex;
-
-        div {
-          line-height: 24px;
-          margin: 0;
-
-          &:first-of-type {
-            width: 100px;
-            color: #5F6368;
-            margin-right: 30px;
-            font-size: 12px;
-          }
-
-          &:last-of-type {
-            color: #202124;
-            font-size: 15px;
-          }
-        }
-      }
-    }
-
-    .transaction {
-      padding: 20px 25px 0;
-
-      div {
-        margin-left: 22px;
-        font-size: 13px;
-        line-height: 24px;
-        color: #202124;
-      }
-
-      .status {
-        display: flex;
-        align-items: center;
-        margin-left: 0;
-
-        div {
-          margin-left: 6px;
-        }
-      }
-
-      .separator {
-        margin: 10px 20px;
-        height: 1px;
-        background: rgba(0,0,0,0.12);
-      }
-    }
-
-  }
 }
 
 .general {
@@ -255,19 +96,53 @@
 }
 
 .products {
-  margin-top: 20px;
-  border-top: 2px solid rgba(0,0,0,0.12);
-  padding: 10px;
-  background: #FAFAFA;
 
-  .title {
-    margin: 10px 10px 20px;
-    color: #5F6368;
-    font-size: 18px;
-    font-weight: 500;
+  &--container {
+    margin-bottom: 25px;
+    padding: 5px;
+    background: #F1F3F4;
+
+    .heading {
+      display: flex;
+      align-items: center;
+      padding: 15px 10px 10px;
+      font-size: 18px;
+      font-weight: 500;
+      color: #202124;
+
+      mat-icon {
+        margin-right: 15px;
+        height: 32px;
+        width: 32px;
+        font-size: 32px;
+        background: #1EBEA5;
+        color: #ffffff;
+        border-radius: 50%;
+      }
+
+      .pending-shipment {
+        background: rgba(0,0,0,0);
+        color: #1EBEA5;
+      }
+
+      .link {
+        margin-left: 15px;
+        color: #2C98F0;
+        cursor: pointer;
+        font-size: 13px;
+      }
+
+      .date {
+        margin-left: 15px;
+      }
+
+      .status {
+        text-transform: capitalize;
+      }
+    }
   }
 
-  &-wrapper {
+  &--wrapper {
     display: flex;
     flex-wrap: wrap;
   }
@@ -276,4 +151,15 @@
 .details-link {
   color: #2C98F0 !important;
   cursor: pointer;
+}
+
+.section {
+  padding: 25px;
+
+  .title {
+    margin-bottom: 15px;
+    color: #333333;
+    font-size: 18px;
+    font-weight: 500;
+  }
 }
