[skip ci] Align headers in campaign general details.

--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -25,7 +25,8 @@
             [associateDataMapper]="emailTemplateMapper"
             (associate)="associateEmailTemplate($event)"
             (disassociate)="disassociateEmailTemplate($event)"
-            (view)="viewEmailTemplate($event)">
+            (view)="viewEmailTemplate($event)"
+            [campaignHeader]="true">
           </table-memory>
         </div>
 
